--- a/src/scss/components/_new_message.scss
+++ b/src/scss/components/_new_message.scss
@@ -92,6 +92,7 @@ $recipients-height: 40px;
 
     #email {
         background: none;
+        height: 40px;
     }
   }
 
